<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/coding"
    tools:context="com.bwaim.scorekeeper.MainActivity">

    <LinearLayout
        android:id="@+id/teamsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/layoutMargin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teamA" />

            <TextView
                android:id="@+id/scoreTeamA"
                style="@style/teamStyle.Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginScore" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="correctSyntaxErrorTeamA"
                android:text="@string/error1" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="correctLogicErrorTeamA"
                android:text="@string/error2" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="virusAttackTeamA"
                android:text="@string/error3" />

        </LinearLayout>

        <View
            android:layout_width="@dimen/separatorSize"
            android:layout_height="match_parent"
            android:background="@color/colorAccent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/teamStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/teamB" />

            <TextView
                android:id="@+id/scoreTeamB"
                style="@style/teamStyle.Score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/beginScore" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="correctSyntaxErrorTeamB"
                android:text="@string/error1" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="correctLogicErrorTeamB"
                android:text="@string/error2" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="virusAttackTeamB"
                android:text="@string/error3" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/timer"
        style="@style/teamStyle.Timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/teamsLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/layoutMargin"
        android:text="@string/timerStart" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/layoutMargin"
        android:orientation="horizontal">

        <Button
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startDebugging"
            android:text="@string/start" />

        <Button
            style="@style/buttonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="startNewProgram"
            android:text="@string/reset" />

    </LinearLayout>

</RelativeLayout>
