<?xml version="1.0" encoding="utf-8"?><!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".configuration.ScoreFragment">

    <data>

        <variable
            name="viewModel"
            type="com.bwaim.scorekeeper.configuration.ConfigurationViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/gradient">

        <LinearLayout
            android:id="@+id/teamsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layoutMargin"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@{viewModel.mConfigurationLiveData.nameA}"
                    tools:text="@string/teamA" />

                <TextView
                    android:id="@+id/scoreTeamA"
                    style="@style/teamStyle.Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginScore" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error1" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error2" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error3" />

            </LinearLayout>

            <View
                android:layout_width="@dimen/separatorSize"
                android:layout_height="match_parent"
                android:background="@color/colorAccent" />

            <LinearLayout
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    style="@style/teamStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/teamB" />

                <TextView
                    android:id="@+id/scoreTeamB"
                    style="@style/teamStyle.Score"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/beginScore" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error1" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error2" />

                <Button
                    style="@style/buttonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/error3" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/timer"
            style="@style/teamStyle.Timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/teamsLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/timerStart" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@id/timer"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/startPauseButton"
                style="@style/buttonStyle"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/start" />

            <Button
                style="@style/buttonStyle"
                android:layout_width="@dimen/zero"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reset" />

        </LinearLayout>

    </RelativeLayout>


</layout>